# CXL-SpecKV

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
docs/: ARCHITECTURE.md  BUILD.md
driver/: speckv_kernel_module.c
driver/uapi/: speckv_ioctl.h
examples/: python_example.py  simple_example.cpp  test_speckv.c
hardware/: README.md
hardware/rtl/: atu.v  coherence_directory.v  cxl_mem_if.v  cxl_speckv_top.v  dma_engine.v  kv_compress.v  kv_decompress.v  prefetch_core.v
hardware/scripts/: build_quartus.tcl
host/include/: speckv.h  speckv_allocator.hpp  speckv_driver.h  speckv_driver.hpp
host/python/: cxlspeckv_coherence.py  speckv_ctypes.py  vllm_speckv_backend.py
host/src/: speckv_allocator.cpp  speckv_c_api.cpp  speckv_driver.cpp
src/: cxl_speckv_system.cpp  cxl_speckv_system.h  main.cpp
src/cxl_memory/: COHERENCE_IMPLEMENTATION.md  coherence_c_api.cpp  coherence_manager.cpp  coherence_manager.h  cxl_memory_manager.cpp  cxl_memory_manager.h
src/fpga_engine/: cache_engine.cpp  cache_engine.h
src/integration/: memory_allocator.cpp  memory_allocator.h
src/prefetcher/: lstm_predictor.cpp  lstm_predictor.h  speculative_prefetcher.cpp  speculative_prefetcher.h
src/utils/: address_translation.cpp  address_translation.h
tests/: test_allocator.cpp  test_c_api.c  test_coherence.cpp  test_dma.c  test_params.c  test_prefetch.c  test_python.py
